Fix rash when switching between tabs while search is running

BUG: 445683